--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -4,12 +4,14 @@ Verdana,
 Geneva,
 Tahoma,
 sans-serif;
+// Hind: wght@400;700
 
 $font-serif: "Source Serif Pro",
 Georgia,
 'Times New Roman',
 Times,
 serif;
+// Source Serif Pro: wght@400;700;900, italic
 
 $text-body: 1rem;
 $text-huge: $text-body * 2.3;
