--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,11 +1,15 @@
 /*------------------ Variables ------------------*/
 
 $colour-base-dark: #354648;
+$colour-base-dark-medium: #516369;
 $colour-base-medium: #748B93;
 $colour-base-medium-light: #cee0e2;
 $colour-base-light: #ffffff;
 $colour-highlight-1: #f3766f;
+$colour-highlight-1-dark: #ee5951;
+$colour-highlight-1-light: #ffb5b1;
 $colour-highlight-2: #ffe553;
+$colour-highlight-2-light: #fff5bc;
 
 // background logo watermark #e7ecf6
 // salmon colour #f3766f
