--- a/src/styles/_portfolio.scss
+++ b/src/styles/_portfolio.scss
@@ -9,6 +9,8 @@
 
 .project {
 
+  padding-bottom: 20px;
+
   &__card {
     position: relative; // For absolute positioning of image-box below
     margin: 30px 0 80px;
@@ -24,7 +26,7 @@
 
     @include screen(medium) {
       width: 600px;
-      margin: 30px auto 120px;
+      margin: 2*$padding-sides-small auto 120px;
     }
 
     &--align-right {
