Closes #16 Footer: Code mobile layout

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@
 $colour-base-dark: #344648;
 $colour-base-dark-medium: #516369;
 $colour-base-medium: #748B93;
+$colour-base-medium-lighter: #92a9b1;
 $colour-base-medium-light: #cee0e2;
 $colour-base-light: #ffffff;
 $colour-highlight-1: #f3766f;
