--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,38 +1,14 @@
 /*------------------ Footer ------------------*/
-.footer {
-  background-color: $colour-highlight-1;
-  text-align: center;
-
-  &__navigation {
-    padding: 0 2*$padding-sides $padding-sides;
-  }
-
-  &__bar {
-    padding: $padding-sides $padding-sides $padding-sides;
-    background-color: $colour-base-dark;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-  }
-
-  &__copyright {
-    color: $colour-base-medium-lighter;
-    font-size: $text-sm;
-  }
-
-  &__media-links {
-
-    &-item {
-      margin-left: 16px;
-      color: $colour-base-light;
-      font-size: 1.2em;
-    }
-  }
-}
-
 .contact {
   padding: 2.5*$padding-sides 0 2*$padding-sides;
+
+  @include screen(small) {
+    padding: 2.5*$padding-sides-small 0 2*$padding-sides-small;
+  }
+
+  @include screen(medium) {
+    padding: 2.5*$padding-sides-small 0 1.4*$padding-sides-small;
+  }
 
   &__container {
     text-align: left;
@@ -44,17 +20,105 @@
     margin-bottom: .4em;
     color: $colour-base-light;
     font-weight: normal;
+
+    @include screen(small) {
+      margin-bottom: .5em;
+    }
+
+    @include screen(large) {
+      margin-bottom: .3em;
+    }
   }
 
   &__link {
     color: $colour-base-light;
-    font-size: 1.3em;
+    font-size: 1.35em;
     font-weight: 700;
 
+    @include screen(small) {
+      font-size: 1.7em;
+    }
+
+    @include screen(medium) {
+      font-size: 1.9em;
+    }
+
+    @include screen(large) {
+      font-size: 2em;
+    }
   }
 }
 
-.gap {
-  justify-content: center;
-  column-gap: 20px;
+.footer {
+  background-color: $colour-highlight-1;
+  text-align: center;
+
+  &__navigation {
+    padding: 0 2*$padding-sides $padding-sides;
+
+    @include screen(small) {
+      padding: 0 2*$padding-sides-small $padding-sides-small;
+    }
+
+    @include screen(medium) {
+      padding: 0 2*$padding-sides-small .7*$padding-sides-small;
+    }
+
+    &-gap {
+      justify-content: center;
+      column-gap: 20px;
+
+      @include screen(small) {
+        column-gap: 30px;
+      }
+
+      @include screen(medium) {
+        column-gap: 0px;
+        margin-left: 0;
+      }
+    }
+  }
+
+  &__bar {
+    padding: $padding-sides $padding-sides .75*$padding-sides;
+    background-color: $colour-base-dark;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    @include screen(small) {
+      padding: $padding-sides-small $padding-sides-small .75*$padding-sides-small;
+    }
+
+    @include screen(large) {
+      padding: $padding-sides-small 44px .75*$padding-sides-small;
+    }
+  }
+
+  &__copyright {
+    color: $colour-base-medium-lighter;
+    font-size: $text-sm;
+  }
+
+  &__media-links {
+
+    &-item {
+      margin-left: 20px;
+      color: $colour-base-light;
+      font-size: 1.4em;
+
+      @include screen(small) {
+        margin-left: 26px;
+        font-size: 1.6em;
+      }
+
+      @include screen(medium) {
+        margin-left: 26px;
+        font-size: 1.8em;
+      }
+
+
+    }
+  }
 }
