--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,6 +10,7 @@
 @import 'typography';
 @import 'header';
 @import 'main';
+@import 'scroll';
 @import 'hero';
 @import 'portfolio';
 @import 'skills';
